--- a/styles.css
+++ b/styles.css
@@ -35,8 +35,8 @@ button {
     padding: 20px;
     font-size: 18px;
     border: none;
-    border-radius: 5px;
-    background-color: #007bff;
+    border-radius: 5px;s
+    background-color: red;
     color: white;
     cursor: pointer;
     transition: background-color 0.3s;
