--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ button {
     font-size: 18px;
     border: none;
     border-radius: 5px;s
-    background-color: red;
+    background-color: #000;
     color: white;
     cursor: pointer;
     transition: background-color 0.3s;
